@@ -291,10 +291,17 @@ this repository contains the full copyright notices and license terms. -->
             <field name="count" eval="True"/>
             <field name="act_window" ref="act_shipment_internal_form"/>
         </record>
+        <record model="ir.action.act_window.domain" id="act_shipment_internal_form_domain_packed">
+            <field name="name">Packed</field>
+            <field name="sequence" eval="50"/>
+            <field name="domain" eval="[('state', '=', 'packed')]" pyson="1"/>
+            <field name="count" eval="True"/>
+            <field name="act_window" ref="act_shipment_internal_form"/>
+        </record>
         <record model="ir.action.act_window.domain"
             id="act_shipment_internal_form_domain_shipped">
             <field name="name">Shipped</field>
-            <field name="sequence" eval="50"/>
+            <field name="sequence" eval="60"/>
             <field name="domain" eval="[('state', '=', 'shipped')]" pyson="1"/>
             <field name="act_window" ref="act_shipment_internal_form"/>
         </record>
@@ -744,6 +751,12 @@ this repository contains the full copyright notices and license terms. -->
                 id="shipment_internal_assign_wizard_button_group_stock">
             <field name="button" ref="shipment_internal_assign_wizard_button"/>
             <field name="group" ref="group_stock"/>
+        </record>
+
+        <record model="ir.model.button" id="shipment_internal_pack_button">
+            <field name="model">stock.shipment.internal</field>
+            <field name="name">pack</field>
+            <field name="string">Pack</field>
         </record>
 
         <record model="ir.model.button" id="shipment_internal_ship_button">
