@@ -1,3 +1,4 @@
+* Add packed state to internal shipment
 
 Version 7.4.0 - 2024-11-04
 --------------------------
